--- a/index.html
+++ b/index.html
@@ -13,20 +13,36 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+        <script>
 
+function googleTranslateElementInit() {
+
+new google.translate.TranslateElement({
+
+pageLanguage: 'en'
+
+}, 'google_translate_element');
+
+}
+
+</script><script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 		<!-- Header -->
 			<header id="header">
 				<h1>Caspen</h1>
 				<nav>
 					<ul>
+
 						<li><a href="#intro">Caspen</a></li>
 						<li><a href="#one">Living</a></li>
 						<li><a href="#two">Setting</a></li>
 						<li><a href="#work">Gallery</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
+                    <div id="google_translate_element"></div>
 				</nav>
 			</header>
+        
+        
 
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
@@ -116,7 +132,7 @@
                             for <strong> only $50,000</strong> and becoming a part of our community leave us your email below and we'll keep you updated </p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
+						<form action="https://formspree.io/f/uros.randelovic@gmail.com" method="post">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
